<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="cart_total_price" type="id" />
    <item name="btn_reorder" type="id"/>
</resources>