<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyOrderFeature</string>
    <string name="infinitea_app">InfiniTea App</string>
    <string name="start_order">Start Order</string>
    <string name="shopping_cart">Shopping Cart</string>

    <!-- Titles -->
    <string name="my_orders">My Orders</string>
    <string name="store_order">Store Orders</string>
    <string name="order_number">Order Number</string>

    <!-- Search & Empty -->
    <string name="search_by_order_number">Search by Order Number</string>
    <string name="no_orders_yet">No orders yet</string>

    <!-- Button labels -->
    <string name="print_receipt">PRINT RECEIPT</string>
    <string name="reorder">REORDER</string>

    <!-- Order content -->
    <string name="ord_001">ORD001</string>
    <string name="rose_bubble_milk_tea">Rose Bubble Milk Tea</string>
    <string name="item_name">item name</string>

    <!-- Prices -->
    <string name="price_5_25">$5.25</string>
    <string name="price_0_00">$0.00</string>
    <string name="initial_total_price">$0.00</string>
    <string name="date_2025_04_27">Date: 2025-04-27</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="item_list">Item list</string>
    <string name="back">Back</string>
</resources>
