<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">


    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="152dp"
        android:layout_height="58dp"
        android:text="Cart"
        android:textSize="40dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/orderIdText"
        android:layout_width="113dp"
        android:layout_height="55dp"
        android:text="List:"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recyclerView"
        android:layout_width="387dp"
        android:layout_height="265dp"
        android:contentDescription="List of items in your cart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/removeAll"
        android:layout_width="115dp"
        android:layout_height="86dp"
        android:onClick="Show"
        android:text="Remove All"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="123dp"
        android:layout_height="86dp"
        android:onClick="OrderButton"
        android:text="Order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="102dp"
        android:layout_height="70dp"
        android:layout_marginBottom="152dp"
        android:text="TextView"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/overLayBlocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="invisible">

        <!-- Confirmation box inside this blocker -->
        <LinearLayout
            android:layout_width="331dp"
            android:layout_height="231dp"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/removeAllMessage"
                android:layout_width="296dp"
                android:layout_height="50dp"
                android:text="Sure to Remove All"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="116dp"
                android:layout_height="73dp"
                android:onClick="ConfirmClickOnRemoveAll"
                android:text="Confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.173"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.772" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="116dp"
                android:layout_height="73dp"
                android:onClick="Hide"
                android:text="Cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.787"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.772" />


        </LinearLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>